--- a/index.html
+++ b/index.html
@@ -69,16 +69,18 @@
         </q-layout-drawer>
 
         <q-page-container>
-            <input type="number" v-model="cautare" placeholder="cauta blogs" />  
+            <input type="number" v-model="cautare" placeholder="cauta pret" />  
+            <br>
             <div style="width: 500px; max-width: 90vw;">
                 <q-list highlight inset-separator >
+                  <q-item>
+                      <q-item-side >pret</q-item-side>
+                      <q-item-main >Denumire</q-item-main>
+                      <q-item-side right >buc</q-item-side>
+                  </q-item>
                   <q-item v-for="blog in filteredBlogs">
                     <q-item-side >{{blog.pret}}</q-item-side>
-
-                    <q-item-main  label-lines="1" >{{blog.titlu}}
-                    </q-item-main>
-
-                   
+                    <q-item-main  label-lines="1" >{{blog.titlu}}</q-item-main>
                     <q-item-side right >{{blog.buc}}</q-item-side>
                   </q-item>
                 </q-list>
@@ -114,7 +116,7 @@
     <script>
       const arrobj=[
  {
-   titlu: "Brosa 65",
+   titlu: "Brosa 65 cu paiete si cacat la cur semanand foarte bie cu domnul aznavur",
    buc: 2,
    pret: '65'
  },
