am creat folder arh/

--- a/index.html
+++ b/index.html
@@ -69,18 +69,27 @@
         </q-layout-drawer>
 
         <q-page-container>
-            <input type="number" v-model="cautare" placeholder="cauta pret" />  
-            <br>
-            <div style="width: 500px; max-width: 90vw;">
-                <q-list highlight inset-separator >
-                  <q-item>
-                      <q-item-side >pret</q-item-side>
-                      <q-item-main >Denumire</q-item-main>
-                      <q-item-side right >buc</q-item-side>
-                  </q-item>
+            <!-- <input type="number" v-model="cautare" placeholder="cauta pret" /> -->
+            <q-search icon="pregnant_woman" color="secondary" 
+                      v-model="cautare" float-label="Cautare dupa pret"
+                      placeholder='introdu pretul'
+                      autofocus />
+  
+            <hr>
+            <!-- <div style="width: 500px; max-width: 90vw;"> -->
+              <div>
+                <q-list highlight inset-separator color="dark" >
+                  <q-list-header>
+                      <q-item>
+                          <q-item-side >pret</q-item-side>
+                          <q-item-main >Denumire</q-item-main>
+                          <q-item-side right >buc</q-item-side>
+                      </q-item>
+                  </q-list-header>
+                  
                   <q-item v-for="blog in filteredBlogs">
                     <q-item-side >{{blog.pret}}</q-item-side>
-                    <q-item-main  label-lines="1" >{{blog.titlu}}</q-item-main>
+                    <q-item-main >{{blog.titlu}}</q-item-main>
                     <q-item-side right >{{blog.buc}}</q-item-side>
                   </q-item>
                 </q-list>
